{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Gameplay",
            "id": "5a386114-0a11-42ad-9574-c1060eeb8ada",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "e84abd84-7743-4ba9-9eb4-047c9c7c9411",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "ed04d9a6-192a-4be6-9142-c9e5f4b86cc2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryWeapon",
                    "type": "Button",
                    "id": "27bb23d0-f005-4ac5-a6f9-224f879078fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryWeapon",
                    "type": "Button",
                    "id": "ddcdeb1e-0423-4eea-8bc0-d2f927c8ba34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "4411b41f-8bf7-4a7b-be8f-dd60482b59b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3c5a4ae-b1c4-4f2c-8799-58bbaa672499",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c71ac1d1-ea88-41fe-aaa1-764af1a54dfb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae91856a-9d2e-4bca-ae09-8d8675d01f51",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80c7273d-53e0-43d6-9448-bd3023ac7339",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7378631e-0fd4-43e5-977a-3884fb11b925",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox Control Scheme",
            "bindingGroup": "Xbox Control Scheme",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}